# tremulous

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  appveyor.yml
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml
assets/ui/: ingame_options.menu  main.menu  options.menu  say.menu
cmake/: AddQVM.cmake  FindCURL.cmake  FindOpenAL.cmake  FindSDL2.cmake  build_dir  curl.cmake  debug_cflags
docs/: Changelog.md
misc/: docker-build.sh
rust/: Cargo.toml  build.rs  rust_common.cpp  rust_server.c  wrapper.h
rust/src/: bindings.rs  cmd.rs  lib.rs
rust/src/client/: mod.rs
rust/src/common/: cvar.rs  mod.rs  net.rs
rust/src/curl/: mod.rs
src/: astyle-code.bat  astyle-code.sh  astyle-options.ini
src/asm/: CMakeLists.txt  float.asm  matha.s  qasm-inline.h  qasm.h  snapvector.asm  snapvector.c  snd_mixa.s  vm_x86_64.asm
src/audio/: libmumblelink.cpp  libmumblelink.h  qal.cpp  qal.h  snd_adpcm.cpp  snd_codec.cpp  snd_codec.h  snd_codec_ogg.cpp  snd_codec_opus.cpp  snd_codec_wav.cpp  snd_dma.cpp  snd_local.h  snd_main.cpp  snd_mem.cpp  snd_mix.cpp  snd_openal.cpp  snd_public.h  snd_wavelet.cpp
src/bgame/: bg_alloc.c  bg_alloc.cpp  bg_lib.c  bg_lib.cpp  bg_lib.h  bg_local.h  bg_misc.c  bg_misc.cpp  bg_pmove.c  bg_pmove.cpp  bg_public.h  bg_slidemove.c  bg_slidemove.cpp  bg_voice.cpp
src/cgame/: CMakeLists.txt  binaryshader.h  cg_animation.c  cg_animation.cpp  cg_animmapobj.c  cg_animmapobj.cpp  cg_attachment.c  cg_attachment.cpp  cg_buildable.c  cg_buildable.cpp  cg_consolecmds.c  cg_consolecmds.cpp  cg_draw.c  cg_draw.cpp  cg_drawtools.c  cg_drawtools.cpp  cg_ents.c  cg_ents.cpp  cg_event.c  cg_event.cpp  cg_local.h  cg_main.c  cg_main.cpp  cg_marks.c  cg_marks.cpp  cg_particles.c  cg_particles.cpp  cg_players.c  cg_players.cpp  cg_playerstate.c  cg_playerstate.cpp  cg_predict.c  cg_predict.cpp  cg_public.h  cg_rangemarker.cpp  cg_scanner.c  cg_scanner.cpp  cg_servercmds.c  cg_servercmds.cpp  cg_snapshot.c  (+13 more)
src/client/: CMakeLists.txt  cl_avi.cpp  cl_cgame.cpp  cl_cin.cpp  cl_console.cpp  cl_curl.cpp  cl_curl.h  cl_input.cpp  cl_keys.cpp  cl_main.cpp  cl_net_chan.cpp  cl_parse.cpp  cl_rest.cpp  cl_rest.h  cl_scrn.cpp  cl_ui.cpp  cl_updates.cpp  cl_updates.h  client.h  keycodes.h  keys.h  libmumblelink.cpp  qal.cpp  qal.h  snd_codec.cpp  snd_codec.h  snd_codec_ogg.cpp  snd_codec_opus.cpp  snd_codec_wav.cpp  snd_dma.cpp  snd_local.h  snd_main.cpp  snd_mem.cpp  snd_mix.cpp  snd_openal.cpp  snd_public.h  snd_wavelet.cpp
src/cm/: cm_load.cpp  cm_local.h  cm_patch.cpp  cm_patch.h  cm_polylib.cpp  cm_polylib.h  cm_public.h  cm_test.cpp  cm_trace.cpp
src/game/: CMakeLists.txt  bg_alloc.cpp  bg_lib.cpp  bg_lib.h  bg_local.h  bg_misc.c  bg_misc.cpp  bg_pmove.cpp  bg_public.h  bg_slidemove.cpp  bg_voice.c  bg_voice.cpp  g_active.c  g_active.cpp  g_admin.c  g_admin.cpp  g_admin.h  g_api.cpp  g_api.h  g_buildable.c  g_buildable.cpp  g_client.c  g_client.cpp  g_cmds.c  g_cmds.cpp  g_combat.c  g_combat.cpp  g_local.h  g_lua.cpp  g_lua.h  g_main.c  g_main.cpp  g_maprotation.c  g_maprotation.cpp  g_misc.c  g_misc.cpp  g_missile.c  g_missile.cpp  g_mover.c  g_mover.cpp  (+33 more)
src/granger/: COPYING  Dockerfile  appveyor.yml
src/granger/src/lua/: CMakeLists.txt
src/gui/: CMakeLists.txt  gui_atoms.c  gui_atoms.cpp  gui_gameinfo.c  gui_gameinfo.cpp  gui_local.h  gui_main.c  gui_main.cpp  gui_public.h  gui_shared.c  gui_shared.cpp  gui_shared.h  gui_syscalls.asm  gui_syscalls.c  gui_syscalls.cpp  gui_syscalls_11.asm
src/null/: null_client.cpp  (+5 more)
src/qcommon/: CMakeLists.txt  alternatePlayerstate.h  cdefs.h  cm_load.cpp  cm_local.h  cm_patch.cpp  cm_patch.h  cm_polylib.cpp  cm_polylib.h  cm_public.h  cm_test.cpp  cm_trace.cpp  cmd.cpp  cmd.h  common.cpp  crypto.cpp  crypto.h  cvar.cpp  cvar.h  files.cpp  files.h  huffman.cpp  huffman.h  ioapi.cpp  ioapi.h  json.h  mathlib.h  md4.cpp  md4.h  md5.cpp  msg.cpp  msg.h  net.h  net_chan.cpp  net_ip.cpp  parse.cpp  puff.cpp  puff.h  q3_lauxlib.cpp  q3_lauxlib.h  (+18 more)
src/qcommon/t/: Makefile  msg.cpp
src/renderercommon/: CMakeLists.txt  iqm.h  qgl.h  tr_common.h  tr_font.cpp  tr_image_bmp.cpp  tr_image_jpg.cpp  tr_image_pcx.cpp  tr_image_png.cpp  tr_image_tga.cpp  tr_noise.cpp  tr_public.h  tr_types.h
src/renderergl1/: CMakeLists.txt  tr_animation.cpp  tr_backend.cpp  tr_bsp.cpp  tr_cmds.cpp  tr_curve.cpp  tr_flares.cpp  tr_image.cpp  tr_init.cpp  tr_light.cpp  tr_local.h  tr_main.cpp  tr_marks.cpp  tr_mesh.cpp  tr_model.cpp  tr_model_iqm.cpp  tr_scene.cpp  tr_shade.cpp  tr_shade_calc.cpp  tr_shader.cpp  tr_shadows.cpp  tr_sky.cpp  tr_subs.cpp  tr_surface.cpp  tr_world.cpp
src/renderergl2/: CMakeLists.txt  builtin.h  tr_animation.cpp  tr_backend.cpp  tr_bsp.cpp  tr_cmds.cpp  tr_curve.cpp  tr_dsa.cpp  tr_dsa.h  tr_extensions.cpp  tr_extramath.cpp  tr_extramath.h  tr_extratypes.h  tr_fbo.cpp  tr_fbo.h  tr_flares.cpp  tr_glsl.cpp  tr_image.cpp  tr_image_dds.cpp  tr_init.cpp  tr_light.cpp  tr_local.h  tr_main.cpp  tr_marks.cpp  tr_mesh.cpp  tr_model.cpp  tr_model_iqm.cpp  tr_postprocess.cpp  tr_postprocess.h  tr_scene.cpp  tr_shade.cpp  tr_shade_calc.cpp  tr_shader.cpp  tr_shadows.cpp  tr_sky.cpp  tr_subs.cpp  tr_surface.cpp  tr_vbo.cpp  tr_world.cpp
src/renderergl2/glsl/: calclevels4x_fp.glsl  depthblur_fp.glsl  depthblur_vp.glsl  dlight_fp.glsl  dlight_vp.glsl  down4x_vp.glsl  fogpass_fp.glsl  fogpass_vp.glsl  generic_fp.glsl  generic_vp.glsl  lightall_fp.glsl  lightall_vp.glsl  pshadow_fp.glsl  pshadow_vp.glsl  shadowfill_vp.glsl  shadowmask_fp.glsl  shadowmask_vp.glsl  ssao_fp.glsl  texturecolor_fp.glsl  texturecolor_vp.glsl  tonemap_fp.glsl  tonemap_vp.glsl
src/script/: CMakeLists.txt  bind.h  client.h  cmd.h  cvar.h  http_client.h  lnettlelib.c  lnettlelib.h  nettle.h  rapidjson.h
src/script/rapidjson/: LICENSE  document.cpp  file.hpp  luax.hpp  rapidjson.cpp  schema.cpp  userdata.hpp  values.cpp  values.hpp
src/server/: CMakeLists.txt  server.h  sv_admin.h  sv_ccmds.cpp  sv_client.cpp  sv_game.cpp  sv_init.cpp  sv_main.cpp  sv_net_chan.cpp  sv_snapshot.cpp  sv_world.cpp
win/: Dockerfile
(+198 files in other folders)
